Added a centered link to search.html in index.html page and modified styles.css with link classes and a link ID.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,8 @@
 	<span id="inner-title">PLEASE LOG IN</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
-	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button>
+<!--	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button> -->
+	<a href="./search.html" id="loginLink" class="links">Go to the search page</a>
 	<span id="loginResult"></span>
 </div>
 
