--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 	<title>COP 4331 LAMP Stack Demo</title>
-	<script type="text/javascript" src="js/md5.js"></script>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="./styles.css" rel="stylesheet">	
+	<script type="text/javascript" src="../js/md5.js"></script>
+	<script type="text/javascript" src="../js/code.js"></script>
+    <link href="../css/styles_loginPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +14,7 @@
 	<span id="inner-title">PLEASE LOG IN</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
-<!--	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Do It </button> -->
+	<button type="button" id="loginButton" class="buttons" onclick="doLoginTest();"> Log In </button>
 	<a href="./search.html" id="loginLink" class="links">Go to the search page</a>
 	<span id="loginResult"></span>
 </div>
