--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title>COP 4331 LAMP Stack Demo</title>
-	<script type="text/javascript" src="js/code.js"></script>
-    <link href="css/styles.css" rel="stylesheet">	
+	<script type="text/javascript" src="../js/code.js"></script>
+    <link href="../css/styles_searchPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
