--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 	document.addEventListener('DOMContentLoaded', function() 
 	{
-		readCookie();
+		//readCookie();
 	}, false);
 	</script>
 	
