--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1 id="title">COP 4331 LAMP Stack Demo</h1>
+<h1 id="title">Squire Contact Repository</h1>
 
 <div id="loginDiv">
 	<span id="inner-title">PLEASE LOG IN</span>
