--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>COP 4331 LAMP Stack Demo</title>
+	<title>Squire Contact Repository</title>
 	<script type="text/javascript" src="../js/code.js"></script>
     <link href="../css/styles_searchPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<h1 id="title">COP4331 Group 13: Contact Manager</h1>
+<h1 id="title">Squire Contact Repository</h1>
 
 <div id="loggedInDiv">
 	<span id="userName"></span><br />
@@ -38,38 +38,13 @@
 				<th>Email</th>
 			  </tr>
 
-			  <tr>
-				<td>Row 1, Column 1</td>
-				<td>Row 1, Column 2</td>
-				<td>Row 1, Column 3</td>
-			  </tr>
-			  <tr>
-				<td>Row 2, Column 1</td>
-				<td>Row 2, Column 2</td>
-				<td>Row 2, Column 3</td>
-			  </tr>
-			  <tr>
-				<td>Row 3, Column 1</td>
-				<td>Row 3, Column 2</td>
-				<td>Row 3, Column 3</td>
-			  </tr>
-			  <tr>
-				<td>Row 4, Column 1</td>
-				<td>Row 4, Column 2</td>
-				<td>Row 4, Column 3</td>
-			  </tr>
-			  <tr>
-				<td>Row 5, Column 1</td>
-				<td>Row 5, Column 2</td>
-				<td>Row 5, Column 3</td>
-			  </tr>
 		  </table>
 	</span>
 
 	<input type="text" id="contactNameText" placeholder="Contact Name">
 	<input type="text" id="contactNumberText" placeholder="Contact Number">
 	<input type="text" id="contactEmailText" placeholder="Contact Email">
-	<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
+	<button type="button" id="addContactButton" class="buttons" onclick="addContactTest();"> Add Contact </button><br />
 	<span id="contactAddResult"></span>
 </div>
 
