Accepted changes to table, primarily JavaScript-based changes, enabling 'Delete' and 'Edit' button creation and partial 'Delete' button functionality (it allows deleting the row).

--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -88,10 +88,10 @@
 	<input type="text" id="contactNumberText" placeholder="Contact Number">
 	<input type="text" id="contactEmailText" placeholder="Contact Email">
 	<button type="button" id="addContactButton" class="buttons" onclick="addContactTest();"> Add Contact </button><br />
-	<input type="tel" id="contactPhoneNumberText" placeholder="Contact Phone Number (e.g. 1234567890)" 
-	pattern="(([0-9]{10})|(+[1-249][(][0-9]{3}[)][ ]?[0-9]{3}[- ]?[0-9]{4}))$">
-	<input type="email" id="contactEmailText" placeholder="Contact Email">
-	<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br />
+<!-- <input type="tel" id="contactPhoneNumberText" placeholder="Contact Phone Number (e.g. 1234567890)" 
+	 pattern="(([0-9]{10})|(+[1-249][(][0-9]{3}[)][ ]?[0-9]{3}[- ]?[0-9]{4}))$">
+	 <input type="email" id="contactEmailText" placeholder="Contact Email">
+	 <button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button><br /> -->
 	<span id="contactAddResult"></span>
 </div>
 
