Added edit buttons for each table cell, added register button on login page (no functionality yet)

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -19,5 +19,12 @@
 	<span id="loginResult"></span>
 </div>
 
+<div id="registerDiv">
+	<span id="registerText">Not registered yet?</span>
+	<br/>
+	<p id="registerInstruction">Register using your current credentials.</p>
+	<button id="registerButton" type="button" class="buttons" onclick="Register.php;">Create your account</button>
+</div>
+
 </body>
 </html>
