Added couple of comments to code.js.

--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -32,10 +32,11 @@
 		<table id="contactTable">
 			<tr>
 				<th>Name</th>
+				<th>Edit Name</th>
 				<th>Phone</th>
+				<th>Edit Phone</th>
 				<th>Email</th>
-				<th>Edit</th>
-				<th>Delete</th>
+				<th>Edit Email</th>
 			  </tr>
 
 			  <tr>
