Added edit contact window and hopefully functionality to it. Matched a couple PHP script names in code.js.

--- a/frontend/html/edit_contact_window.html
+++ b/frontend/html/edit_contact_window.html
@@ -14,9 +14,11 @@
 	</script>
 </head>
 	
-<body id="newContactBody">
+<body id="editContactBody">
 
 <h1 id="editWindowTitle">Edit Contact</h1>
+
+<!--
 
 <script>
 	var table = document.getElementById("contactTable");
@@ -51,6 +53,7 @@ info about how to make such a popup:
 </a></div>
 </p>
 
+-->
 
 </body>
 </html>
