API integration prep. Added regsistry pre-funcitonality

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -11,7 +11,7 @@
 <h1 id="title">Squire Contact Repository</h1>
 
 <div id="loginDiv">
-	<span id="inner-title">PLEASE LOG IN</span>
+	<span id="inner-title">LOG IN</span>
 	<input type="text" id="loginName" placeholder="Username" /><br />
 	<input type="password" id="loginPassword" placeholder="Password"/><br />
 	<button type="button" id="loginButton" class="buttons" onclick="doLoginTest();"> Log In </button>
@@ -20,10 +20,9 @@
 </div>
 
 <div id="registerDiv">
-	<span id="registerText">Not registered yet?</span>
-	<br/>
-	<p id="registerInstruction">Register using your current credentials.</p>
-	<button id="registerButton" type="button" class="buttons" onclick="Register.php;">Create your account</button>
+	<span id="registerText">Not registered yet?</span><br/>
+	<p id="registerInstruction">Register using your current credentials in the login fields.</p>
+	<button id="registerButton" type="button" class="buttons" onclick="register();">Create Account</button>
 </div>
 
 </body>
