--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -24,10 +24,11 @@
 </div>
 
 <div id="accessUIDiv">
-	<br />
-
-	<input type="search" id="searchText" placeholder="Name To Search For"/>
-	<button type="button" id="searchNameButton" class="buttons" onclick="searchContact();"> Search Name </button><br />
+	<p id="searchMsg"> </p>
+	<input type="search" id="searchText" placeholder="Contact Name"/>
+	<input type="search" id="searchText" placeholder="Contact Number"/>
+	<input type="search" id="searchText" placeholder="Contact Email"/>
+	<button type="button" id="searchNameButton" class="buttons" onclick="searchContact();"> Search </button><br />
 	<span id="contactSearchResult">
 		<table id="contactTable">
 			<tr>
@@ -38,9 +39,9 @@
 
 		  </table>
 	</span>
-
+	<p id="addMsg"> </p>
 	<input type="text" id="contactNameText" placeholder="Contact Name">
-	<input type="text" id="contactNumberText" placeholder="Contact Number">
+	<input type="text" id="contactNumberText" placeholder="Contact Number (XXX-XXX-XXXX)">
 	<input type="text" id="contactEmailText" placeholder="Contact Email">
 	<button type="button" id="addContactButton" class="buttons" onclick="addContactTest();"> Add Contact </button><br />
 	<span id="contactAddResult"></span>
