Search skeleton code

--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -25,10 +25,10 @@
 
 <div id="accessUIDiv">
 	<p id="searchMsg"> </p>
-	<input type="search" id="searchText" placeholder="Contact Name"/>
-	<input type="search" id="searchText" placeholder="Contact Number"/>
-	<input type="search" id="searchText" placeholder="Contact Email"/>
-	<button type="button" id="searchNameButton" class="buttons" onclick="searchContact();"> Search </button><br />
+	<input type="search" id="nameSearch" placeholder="Contact Name"/>
+	<input type="search" id="numberSearch" placeholder="Contact Number"/>
+	<input type="search" id="emailSearch" placeholder="Contact Email"/>
+	<button type="button" id="searchNameButton" class="buttons" onclick="populateTest();"> Search </button><br />
 	<span id="contactSearchResult">
 		<table id="contactTable">
 			<tr>
