Added name, phone, and email register fields
Added register fields for first name, last name, phone number, and email; re-aligned some elements of the login page, namely the new fields and the title, to be more centered.

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -21,7 +21,11 @@
 
 <div id="registerDiv">
 	<span id="registerText">Not registered yet?</span><br/>
-	<p id="registerInstruction">Register using your current credentials in the login fields.</p>
+	<p id="registerInstruction">Fill out the fields below, then register using those and your current credentials in the login fields.</p>
+	<input id="registerFirstName" type="text" placeholder="First Name" class="registerFields"><br />
+	<input id="registerLastName" type="text" placeholder="Last Name" class="registerFields"><br />
+	<input id="registerPhone" type="text" placeholder="Phone Number (XXX-XXX-XXXX)" class="registerFields"><br />
+	<input id="registerEmail" type="text" placeholder="Email (something@myEmail.com)" class="registerFields"><br />
 	<button id="registerButton" type="button" class="buttons" onclick="register();">Create Account</button>
 </div>
 
