--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -28,7 +28,7 @@
 	<input type="search" id="nameSearch" placeholder="Contact Name"/>
 	<input type="search" id="numberSearch" placeholder="Contact Number"/>
 	<input type="search" id="emailSearch" placeholder="Contact Email"/>
-	<button type="button" id="searchNameButton" class="buttons" onclick="populateTest();"> Search </button><br />
+	<button type="button" id="searchNameButton" class="buttons" onclick="searchContactTest();"> Search </button><br />
 	<span id="contactSearchResult">
 		<table id="contactTable">
 			<tr>
