Re-introduced phone and email to user registry

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -26,6 +26,8 @@
 	<input id="registerPassword" type="text" placeholder="Password" class="registerFields"><br />
 	<input id="registerFirstName" type="text" placeholder="First Name" class="registerFields"><br />
 	<input id="registerLastName" type="text" placeholder="Last Name" class="registerFields"><br />
+	<input id="registerPhone" type="text" placeholder="Phone number (XXX-XXX-XXXX)" class="registerFields"><br />
+	<input id="registerEmail" type="text" placeholder="Email (NAME@DOMAIN.XYZ)" class="registerFields"><br />
 	<button id="registerButton" type="button" class="buttons" onclick="register();">Create Account</button>
 </div>
 
