HTML/CSS adjustments for search page

--- a/frontend/html/search.html
+++ b/frontend/html/search.html
@@ -19,7 +19,6 @@
 <h1 id="title">Squire Contact Repository</h1>
 
 <div id="loggedInDiv">
-	<span id="userName"></span><br />
 	<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
 </div>
 
@@ -42,7 +41,7 @@
 	<p id="addMsg"> </p>
 	<input type="text" id="contactNameText" placeholder="Contact Name">
 	<input type="text" id="contactNumberText" placeholder="Contact Number (XXX-XXX-XXXX)">
-	<input type="text" id="contactEmailText" placeholder="Contact Email">
+	<input type="text" id="contactEmailText" placeholder="Contact Email (NAME@DOMAIN.XYZ)">
 	<button type="button" id="addContactButton" class="buttons" onclick="addContactTest();"> Add Contact </button><br />
 	<span id="contactAddResult"></span>
 
