--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>COP 4331 LAMP Stack Demo</title>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
 	<script type="text/javascript" src="../js/md5.js"></script>
 	<script type="text/javascript" src="../js/code.js"></script>
     <link href="../css/styles_loginPage.css" rel="stylesheet">	
