Duplicate func deletion, func refactoring

--- a/frontend/html/edit_contact_refactored.html
+++ b/frontend/html/edit_contact_refactored.html
@@ -17,8 +17,7 @@
 <body id="editContactBody" onload="populateEditPage()">
     <h1 id="editContactTitleHeading">Edit Contact</h1><br/>
     <p id="contactSearchResult">Contact Search Result: N/a</p>
-    <p id="contactAddResult">Contact Add Result: N/a</p>
-    <p id="contactDeleteResult">Contact Delete Result: N/a</p>
+    <p id="contactUpdateResult">Contact Update Result: N/a</p>
     <input id="userIdField" type="hidden" value="defaultUserId" name="userId"/><br />
     <input id="contactIdField" type="hidden" value="defaultContactId" name="contactId"/><br />
     <input id="nameField" type="text" value="Default Name" name="name"/><br />
