--- a/html/search.html
+++ b/html/search.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Squire Contact Repository</title>
-	<script type="text/javascript" src="../js/code.js"></script>
-    <link href="../css/styles_searchPage.css" rel="stylesheet">	
+	<script type="text/javascript" src="./js/code.js"></script>
+    <link href="./css/styles_searchPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
