--- a/html/edit_contact_refactored.html
+++ b/html/edit_contact_refactored.html
@@ -2,8 +2,8 @@
 <html>
 <head id="editContactHead">
 	<title id="editContactTitle">Squire Contact Repository: Edit Contact</title>
-	<script type="text/javascript" src="../js/code.js"></script>
-    <link href="../css/styles_searchPage.css" rel="stylesheet">	
+	<script type="text/javascript" src="./js/code.js"></script>
+    <link href="./css/styles_searchPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
