--- a/edit_contact.html
+++ b/edit_contact.html
@@ -3,7 +3,7 @@
 <head id="editContactHead">
 	<title id="editContactTitle">Squire Contact Repository: Edit Contact</title>
 	<script type="text/javascript" src="./js/code.js"></script>
-    <link href="../css/styles_searchPage.css" rel="stylesheet">	
+    <link href="./css/styles_searchPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
