--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Squire Contact Repository</title>
 	<script type="text/javascript" src="./js/code.js"></script>
-    <link href="../css/styles_searchPage.css" rel="stylesheet">	
+    <link href="./css/styles_searchPage.css" rel="stylesheet">	
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
 	
 	<script type="text/javascript">
