--- a/search.html
+++ b/search.html
@@ -9,7 +9,7 @@
 	<script type="text/javascript">
 	document.addEventListener('DOMContentLoaded', function() 
 	{
-		//readCookie();
+		readCookie();
 	}, false);
 	</script>
 	
