--- a/edit_contact.html
+++ b/edit_contact.html
@@ -16,8 +16,8 @@
 </head>
 <body id="editContactBody" onload="populateEditPage()">
     <h1 id="editContactTitleHeading">Edit Contact</h1><br/>
-    <p id="contactSearchResult">Contact Search Result: N/a</p>
-    <p id="contactUpdateResult">Contact Update Result: N/a</p>
+    <p id="editPageContactSearchResult">Contact Search Result: N/a</p>
+    <p id="editPageContactUpdateResult">Contact Update Result: N/a</p>
     <input id="userIdField" type="hidden" value="defaultUserId" name="userId"/><br />
     <input id="contactIdField" type="hidden" value="defaultContactId" name="contactId"/><br />
     <input id="nameField" type="text" value="Default Name" name="name"/><br />
