Fixed error messaging

--- a/search.html
+++ b/search.html
@@ -36,6 +36,7 @@
 		<span>Here is some text</span>
 	</div>
 	<span id="contactSearchResult">
+		<p id="tableMsg"> </p>
 		<table id="contactTable">
 			<tr>
 				<th>Name</th>
