Removed unused functions, edit page, and readded "contactAddResult" span

--- a/search.html
+++ b/search.html
@@ -54,6 +54,7 @@
 		<input type="text" id="contactEmailText" placeholder="Contact Email (NAME@DOMAIN.XYZ)" class="addField">
 		<button type="button" id="addContactButton" class="buttons" onclick="addContact();"> Add Contact </button>
 	</div>
+	<span id="contactAddResult"></span>
 	<br />
 	<div id="loggedInDiv">
 		<button type="button" id="logoutButton" class="buttons" onclick="doLogout();"> Log Out </button>
