Added 'Search All Contacts' button

--- a/search.html
+++ b/search.html
@@ -31,6 +31,8 @@
 			<input type="search" id="emailSearch" placeholder="Contact Email" class="searchField"/>
 		</div>
 		<button type="button" id="searchNameButton" class="buttons" onclick="searchContact();"> Search </button><br />
+		<button type="button" id="searchAllButton" class="buttons" onclick="searchAllContacts();"> Search all contacts </button>
+		<br />
 	</div>
 	<div id="grow" class="growDiv">
 		<span>Here is some text</span>
