added elements for testing locally

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<button type="button" id="registerButton" class="buttons" onclick=register();> Create Account </button>
 	<span id="registerText">Not registered yet?</span>
 	<button id="signUpButton" type="button" class="buttons" onclick="showRegister(this);">Sign Up</button>
+	<button id="signUpButton" type="button" class="buttons" onclick="buttonSearchPage();">Search Page</button>
 	<span id="loginResult"></span>
 </div>
 <!--
