--- a/search.html
+++ b/search.html
@@ -37,15 +37,20 @@
 	<div id="grow" class="growDiv">
 		<span>Here is some text</span>
 	</div>
+	<button type="button" id="searchNameButton" class="buttons" onclick="makeFakeContact();"> fake contacts </button><br />
 	<span id="contactSearchResult">
 		<p id="tableMsg"> </p>
 		<table id="contactTable">
-			<tr>
+			<tr id="tableHeading">
 				<th>Name</th>
-				<th>Phone</th>
+				<th id="phoneHeadingTable">Phone</th>
 				<th>Email</th>
-			  </tr>
+				<th></th>
+				<th></th>
+			</tr>
+			<tbody>
 
+			</tbody>
 		  </table>
 	</span>
 	<p id="addMsg"> </p>
