--- a/search.html
+++ b/search.html
@@ -24,7 +24,7 @@
 		<h2 id="subtitle">Contact Repository</h2>
 	</div>
 	<div class="navContainer">
-		<h2 id="greeting">Welcome back, Joey</h2>
+		<h2 id="greeting">Welcome</h2>
 		<button type="button" id="logoutButton" class="buttons" onclick="doLogout();">
 			Log Out &nbsp <i class="fa-solid fa-right-from-bracket"></i>
 		</button>
