Fixed greeting's dynamic alteration

--- a/search.html
+++ b/search.html
@@ -12,6 +12,7 @@
 	document.addEventListener('DOMContentLoaded', function() 
 	{
 		readCookie();
+		document.getElementById("greeting").innerHTML = "Welcome back, " + USER_INFO.firstName + ".";
 	}, false);
 	</script>
 	
