Fixed contact table header

--- a/search.html
+++ b/search.html
@@ -58,9 +58,7 @@
 			<tr id="tableHeading">
 				<th>Name</th>
 				<th id="phoneHeadingTable">Phone</th>
-				<th>Email</th>
-				<th></th>
-				<th></th>
+				<th colspan="3">Email</th>
 			</tr>
 			<tbody>
 
