Fixed register regex, added labels in search page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		
 	</form>
 	<button type="button" id="loginButton" class="buttons" onclick="doLogin();"> Log in </button>
+	<span id="registerErrText"></span>
 	<button type="button" id="registerButton" class="buttons" onclick=register();> Create Account </button>
 	<span id="registerText">Not registered yet?</span>
 	<button id="signUpButton" type="button" class="buttons" onclick="showRegister(this);">Sign Up</button>
